[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "runner"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
flask-cors = "^3.0"
flask-restful = "^0.3.7"
python = "^3.8"
sqlalchemy = "^1.3"
[tool.poetry.dev-dependencies]
